syntax = "proto3";

package auth;

service AuthService {
  rpc Register (RegisterAuthRequestDto) returns (GenericResponseDto) {}
  rpc Login (LoginAuthRequestDto) returns (LoginAuthResponseDto) {}
}

message RegisterAuthRequestDto {
  string username = 1;
  string password = 2;
}

message LoginAuthRequestDto {
    string username = 1;
    string password = 2;
}

message LoginAuthResponseDto {
    string accessToken = 1;
}

message GenericResponseDto {
  string message = 1;
}
